UPDATE: Cross-Platform Compile

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,9 +14,11 @@
 
 			"args": [
 				"-fdiagnostics-color=always",
+				"-Wall",
 				"-g",
 				"viewer.c",
 				"Structures/LinkedList/**.c",
+				"Structures/Vector/**.c",
 				"-o",
 				"build/viewer"
 			],
