FIX: [DoukedList] Building

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,7 @@
 				"-g",
 				"viewer.c",
 				"${workspaceFolder}/Structures/LinkedList/linkedlist.c",
+				"${workspaceFolder}/Structures/DoukedList/doukedlist.c",
 				"${workspaceFolder}/Structures/Vector/vector.c",
 				"-o",
 				"build/viewer"
